# sofc_properties_extraction

./: .gitignore.txt  LICENSE  README.md  example_usage.py  pyproject.toml
sofca/: __init__.py  io_utils.py  morphology.py  plot.py  properties.py  tpb_extraction.py
