[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sofca"
version = "0.1.0"
description = "SOFCA: TPB edge extraction and grain property analysis utilities"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "tifffile",
  "scikit-image",
  "joblib",
  "scipy",
  "openpyxl",
  "matplotlib",
]

[tool.setuptools]
packages = ["sofca"]
